Fixed some findbugs comments